crates/oxc_astro_codegen/tests/integration/snapshots/astro/script_external_in_expression__renderscript__false_.snap
---
source: crates/oxc_codegen/tests/integration/astro.rs
---
### Input
<main>{<script src="./hello.js"></script>}

### Expected (Go compiler)
import {
  Fragment,
  render as $$render,
  createAstro as $$createAstro,
  createComponent as $$createComponent,
  renderComponent as $$renderComponent,
  renderHead as $$renderHead,
  maybeRenderHead as $$maybeRenderHead,
  unescapeHTML as $$unescapeHTML,
  renderSlot as $$renderSlot,
  mergeSlots as $$mergeSlots,
  addAttribute as $$addAttribute,
  spreadAttributes as $$spreadAttributes,
  defineStyleVars as $$defineStyleVars,
  defineScriptVars as $$defineScriptVars,
  renderTransition as $$renderTransition,
  createTransitionScope as $$createTransitionScope,
  renderScript as $$renderScript,
  createMetadata as $$createMetadata
} from "http://localhost:3000/";

export const $$metadata = $$createMetadata("/src/pages/index.astro", { modules: [], hydratedComponents: [], clientOnlyComponents: [], hydrationDirectives: new Set([]), hoisted: [] });

const $$Index = $$createComponent(($$result, $$props, $$slots) => {

return $$render`${$$maybeRenderHead($$result)}<main>${$$render`<script src="./hello.js"></script>`}</main>`;
}, "/src/pages/index.astro", undefined);
export default $$Index;

### Actual (Oxc)
ERROR: Parse errors: [OxcDiagnostic { inner: OxcDiagnosticInner { message: "Expected `<` but found `EOF`", labels: Some([LabeledSpan { label: Some("`<` expected"), span: SourceSpan { offset: SourceOffset(42), length: 0 }, primary: false }]), help: None, note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }]
